--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1089,9 +1089,21 @@ textarea{
     font-size: 2.5rem;
   }
 
+ input:not(.btn-main):not(.checkbox){
+   width: 100%;
+ }
+
+ textarea{
+   width: 100%;
+ }
   .choice h2:not(.operators h2) {
 
     text-align: left;
+}
+
+.custom-h2{
+  text-align: left;
+  font-size: 22px;
 }
 
 
@@ -1102,6 +1114,12 @@ textarea{
     max-width: 100vw;
     position: sticky; top: 0;
     z-index: 25;
+  }
+
+  .form-columns{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 100px;
   }
 
   .hamburger{
@@ -1138,6 +1156,10 @@ textarea{
   .hero img{
     height: 550px;
     border-radius: 0;
+  }
+
+  .options-choices > div{
+    width: 24%;
   }
 
   .residential img{
@@ -1189,6 +1211,13 @@ textarea{
     font-weight: bold;
   }
 
+  .profile-parent{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 50px;
+
+  }
+
   .secondary-hero{
     max-height: 44vw;
     object-fit: cover;
@@ -1199,13 +1228,17 @@ textarea{
     margin: auto;
   }
 
+  .top-padding{
+    padding-top: 40px;
+  }
+
   .video p{
     text-align: center;
   }
   .video div{
     margin: auto;
     max-width: 650px;
-
+    margin-top: 20px;
   }
 }
 
@@ -1218,6 +1251,10 @@ textarea{
 
     .hero img{
       height: 650px;
+    }
+
+    .profile-parent{
+      column-gap: 100px;
     }
 
     .secondary-hero{
