--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,6 +20,8 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="canonical" href="{{ .Permalink }}" />
   <link rel="stylesheet" href="/css/styles.css">
+  <script defer data-domain="foothillsoverheaddoors.com" src="https://plausible.io/js/script.js"></script>
+
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Summary }}{{ . }}{{ else }}{{ .Site.Params.description }}{{end }}{{ end }} ">
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
