--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
 	  </div>
 		<div class="footer-contact">
 			<a href="tel:8702759899" class="phone-number">870-275-9899</a>
-			<a href="https://goo.gl/maps/myBRKTUYtvvz2gNSA">135 Leggett St, Jonesboro AR 72401</a>
+			<a href="https://goo.gl/maps/myBRKTUYtvvz2gNSA">4803 E Parker Rd, Jonesboro AR 72401</a>
 		</div>
   </div>
 
