--- a/layouts/shortcodes/reviews.html
+++ b/layouts/shortcodes/reviews.html
@@ -1,47 +1,47 @@
+
 <div class="reviews-parent">
 
-{{ $reviews := getJSON "https://api.app.outscraper.com/maps/reviews-v3?query=ChIJU7-Ou0Mp1IcReeTe5L195C4&reviewsLimit=12&async=false" (dict "X-API-KEY" "YXV0aDB8NjM2MjU2Y2Y5MWJkYjhlZDdjYmRhMGEwfDMxZWIyOWI4YmQ") }}
- <div class="reviews-slider disable-scrollbars">
- {{ $reviewsData := $reviews.data }}
- {{ $data_first := index $reviewsData 0 }}
- {{ range $data_first.reviews_data}}
+  {{ $reviews := getJSON "/data/reviews.json"}}
+   <div class="reviews-slider disable-scrollbars">
 
+   {{ $data_first := index $reviews 0 }}
+   {{ range $reviews}}
 
-   <div  id="_review8" itemprop="review" itemscope itemtype="http://schema.org/Review" class="review">
-     <div class="rating">
+     <div  id="_review8" itemprop="review" itemscope itemtype="http://schema.org/Review" class="review">
+       <div class="rating">
+
+       </div>
+       <p class="rev-text brown-text big-p"> <span itemprop="reviewBody"> {{ .review_text }} </span> </p>
+       <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name"><h5 class="rev-name light-tan-text">-{{ .author_title }} </h5></span></span>
+       <p hidden class="rating-number"> {{ .review_rating }}</p>
 
      </div>
-     <p class="rev-text brown-text big-p"> <span itemprop="reviewBody"> {{ .review_text }} </span> </p>
-     <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name"><h5 class="rev-name light-tan-text">-{{ .author_title }} </h5></span></span>
-     <p hidden class="rating-number"> {{ .review_rating }}</p>
+     {{end}}
 
    </div>
-   {{end}}
+  </div>
+  <script type="text/javascript">
 
- </div>
-</div>
-<script type="text/javascript">
+    //adds the correct amount of stars to the review
+     let reviews = document.querySelectorAll('.review')
+     var i;
 
-  //adds the correct amount of stars to the review
-   let reviews = document.querySelectorAll('.review')
-   var i;
+     for(i=0; i < reviews.length; i++){
+       reviews[i].classList.add(i)
+     }
 
-   for(i=0; i < reviews.length; i++){
-     reviews[i].classList.add(i)
-   }
+     for (i=0; i<33; i++){
+       review = document.getElementsByClassName(i)
+       let rating = review[0].children[3].innerHTML
+       let ratingNumber = Number(rating);
+       let starParent = review[0].children[0];
+       for (r=0; r<ratingNumber; r++){
+         starParent.innerHTML += "<img src='/images/star.svg' alt='star rating'>"
+       }
 
-   for (i=0; i<12; i++){
-     review = document.getElementsByClassName(i)
-     let rating = review[0].children[3].innerHTML
-     let ratingNumber = Number(rating);
-     let starParent = review[0].children[0];
-     for (r=0; r<ratingNumber; r++){
-       starParent.innerHTML += "<img src='/images/star.svg' alt='star rating'>"
+
+
      }
 
 
-
-   }
-
-
-</script>
+  </script>
