--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -987,7 +987,7 @@ textarea{
   background-color: #0597A3;
 }
 .tinted{
-  background-color: #747474;
+  background-color: #454545;
 }
 .clear{
   background-color: #f8f8f8;
@@ -1237,6 +1237,7 @@ textarea{
 
   .menu-item-dd{
     position: relative;
+    cursor: pointer;
   }
 
   .menu a, .menu li{
