--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -534,6 +534,11 @@ textarea{
   color: var(--secondary);
 }
 
+.form-parent{
+  max-width: 600px;
+  margin: auto;
+}
+
 .input{
   border-radius: 10px;
   border: none;
