--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,9 @@
 <header>
   <div class="header-row">
-    <a href="tel:8702759899" class="phone-number">870-275-9899 <span class="small-header-text">Call or Text</span></a>
+    <div class="header-row-cont">
+      <div class="header-row-img" ><img src="/images/CHI-elite-dealer.png" alt="CHI elite Dealer"></div>
+      <a href="tel:8702759899" class="phone-number">870-275-9899 <span class="small-header-text">Call or Text</span></a>
+    </div>
 
     <div class="hamburger">
       <img src="/images/Icons_Menu.svg" alt="menu">
