added suppliers page and updates

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -31,6 +31,11 @@
           <a href="/rolling-steel" class="menu-item">Commercial Rolling Steel</a>
           <a href="/commercial-operators" class="menu-item">Commercial Operators</a>
         </div>
+         <p class="menu-item-dd dd-link" id="dropdown-m-faq">FAQs</p>
+        <div class="dropdown" id="dropdown-el-m-faq">
+          <a href="/faqs" class="menu-item">FAQs</a>
+          <a href="/suppliers" class="menu-item">Suppliers</a>
+        </div>
         <a href="/faqs" class="menu-item">FAQs</a>
         <a href="/reviews" class="menu-item">Reviews</a>
         <a href="/about" class="menu-item">About</a>
@@ -55,7 +60,13 @@
           <a href="/commercial-operators">Commercial Operators</a>
         </div>
         </li>
-        <li><a href="/faqs">FAQs</a></li>
+        <li id="dropdown-faq-dt" class="menu-item-dd">FAQs
+        <div id="dropdown-faq-element-dt" class="dropdown-faq-dt">
+          <a href="/faqs">FAQs</a>
+          <a href="/suppliers">Suppliers</a>
+        </div>
+        </li>
+       
       </ul>
     </nav>
     <a href="/" class="logo">
