--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -486,14 +486,14 @@ textarea{
   font-size: 1.25rem!important;
 }
 
-#dropdown-dt::after, #dropdown-com-dt::after{
+#dropdown-dt::after, #dropdown-com-dt::after, #dropdown-faq-dt::after{
   content: url(/images/arrow-down0.svg);
   position: absolute;
   right: -16px;
   top: 10%;
 }
 
-.dropdown-dt, .dropdown-com-dt{
+.dropdown-dt, .dropdown-com-dt, .dropdown-faq-dt{
   display: none;
   flex-direction: column;
   position: absolute;
@@ -619,6 +619,11 @@ textarea{
   height: 200px;
 }
 
+#haus img{
+  height: 90px;
+  margin-bottom: 87px;
+}
+
 .header-row{
   display: flex;
   flex-direction: row;
@@ -735,9 +740,9 @@ textarea{
 
 .logos img{
   max-width: 222px;
-  max-height: 72px;
+  height: 72px;
   display: block;
-  margin: 62px auto;
+  margin: 62px auto 20px;
 }
 .liftmaster{
   height: 29px;
@@ -981,6 +986,17 @@ textarea{
   margin-block-start: 0;
 }
 
+.suppliers-help{
+  text-decoration: none;
+  color: var(--primary);
+  margin: 0 auto 50px;
+  font-family: 'plus-Jakarta-Sans', sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+}
+
 .suppliers h2{
   margin-block-end: 0;
 }
@@ -1092,6 +1108,16 @@ textarea{
 .home-hero h1{
   margin-block-end: 10px;
 }
+
+ .logos{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 800px;
+    margin: auto;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
 
 .options-choices>div{
   width: 32%;
@@ -1240,14 +1266,7 @@ textarea{
     max-width: 240px;
   }
 
-  .logos{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    max-width: 800px;
-    margin: auto;
-    gap: 1rem;
-  }
+ 
 
   .menu{
     display: flex;
