--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -41,7 +41,7 @@
 }
 </script>
    <!-- Google tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VNW6VRF075"> </script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-VNW6VRF075'); </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-1040731477"> </script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-VNW6VRF075'); </script>
 
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Summary }}{{ . }}{{ else }}{{ .Site.Params.description }}{{end }}{{ end }} ">
   {{ template "_internal/opengraph.html" . }}
